Bis Themen Abstände anpassen, so dass es final passt.

--- a/templates/craft_sicherungWebsite/templates/projekte/programme.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/programme.html
@@ -24,7 +24,7 @@
 
   <div class="container achterspaltenlayout" style="padding-top: 0px; padding-bottom: 0; position: relative">
     <div style="padding-bottom:3rem; ">
-      <h1 style="padding-bottom: 30px;"> Mit drei nachhaltigen Programmen zum Ziel  </h1>
+      <h1 style="padding-bottom: 2rem;"> Mit drei nachhaltigen Programmen zum Ziel  </h1>
       <p id="anleser" style="padding-bottom: 2rem;"> Durch die strategische Verknüpfung drei nachhaltiger Entwicklungsprogramme bekämpfen wir Armut, geben Hoffnung und erreichen unser Ziel: starke Dörfer,
         gesunde Kinder und Familien, würdevolle Lebensperspektiven sowie ein verantwortlicher Umgang mit der Schöpfung.
       </p>
@@ -33,7 +33,7 @@
   </div>
 
 
-    <div class="container zwoelferspaltenlayout" style="padding-top: 0;">
+    <div class="container zwoelferspaltenlayout" style="padding-top: 0; padding-bottom: 2rem;">
       <div class="card-deck">
         <div class="row">
 
