--- a/templates/craft_sicherungWebsite/templates/projekte/index.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/index.html
@@ -29,9 +29,9 @@
 
   <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;">
 
-  <div class="container achterspaltenlayout" style="padding-top: 0px; position: relative;">
-      <h1 style="padding-bottom: 30px;"> Unsere Projekte haben die Verbesserung der ganzheitlichen Lebensqualität der Menschen zum Ziel  </h1>
-      <p id="anleser"> Sie fördern die kulturelle, wirtschaftliche und ökologische Nachhaltigkeit, bekämpfen die Armut und stärken die Selbstbestimmung. In sozialen und
+  <div class="container achterspaltenlayout" style="padding-top: 0; padding-bottom: 0; position: relative;">
+      <h1 style="padding-bottom: 2rem;"> Unsere Projekte haben die Verbesserung der ganzheitlichen Lebensqualität der Menschen zum Ziel  </h1>
+      <p id="anleser" style="padding-bottom: 0; margin-bottom: 0;"> Sie fördern die kulturelle, wirtschaftliche und ökologische Nachhaltigkeit, bekämpfen die Armut und stärken die Selbstbestimmung. In sozialen und
         ökologischen Krisengebieten richten unsere Projekte sich in erster Linie an indigene
         Gemeinschaften, Frauen, Kinder, Jugendliche und Randgruppen, die so für ihre Zukunft selbst aktiv werden können.
       </p>
@@ -48,7 +48,7 @@
 
           {% for entry in entries %}  {% if entry.slug != 'blick' %}
           {% set counter = counter + 1 %}
-          <div class="col-lg-4 col-md-6 col-sm-6" style="padding-bottom: 40px; padding-right: 5px; padding-left: 5px;">
+          <div class="col-lg-4 col-md-6 col-sm-6" style="padding-bottom: 5rem; padding-right: 5px; padding-left: 5px;">
 
           <div class="card border-light h-100">
             <img class="card-img-top"  src="  {% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" alt="Card image">
