--- a/templates/craft_sicherungWebsite/templates/projekte/programme/kinderpate.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/programme/kinderpate.html
@@ -34,7 +34,7 @@
 
     {% set entry = craft.entries.section('projekte').slug('kinderpaten').one() %}
 
-    <h1 style="padding-bottom: 30px;"> {{ entry.anleser }}  </h1>
+    <h1 style="padding-bottom: 2rem;"> {{ entry.anleser }}  </h1>
     <div id="anleser" style="padding-bottom: 0;"> {{ entry.text }}</div>
     </div>
   </div>
@@ -46,9 +46,9 @@
 
 {% set akkordionBilder = craft.entries.section('spendenfelderUndSo').slug('akkordion-bilder').one() %}
 
-  <div class="container achterspaltenlayout" id="saeulen" style="padding-top: 2rem;">
+  <div class="container achterspaltenlayout" id="saeulen" style="padding-top: 5rem; padding-bottom: 4rem;">
     {% set entry = craft.entries.section('projekte').slug('säulen').one() %}
-    <h2> {{ entry.title }} </h2>
+    <h2 style="padding-bottom: 2rem;"> {{ entry.title }} </h2>
     <div id="anleser"> {{ entry.anleser }} </div>
 
     {% set entries = craft.entries.section('projekte').slug('säulen').one().children().all() %}
@@ -56,9 +56,11 @@
     <div id="accordion">
 
       {# If there are any entries, loop through them #}
-      {% if entries | length %}        {% set counter = 0 %}
+      {% set counter = 0 %}
 
-      {% for entry in entries %} {% set counter = counter + 1 %}
+      {% for entry in entries %}
+      {% if entry.slug != 'klausel' %}
+      {% set counter = counter + 1 %}
       <div class="card" style=" border-color: white; border-top-color: #ed6e2c; border-width: 1px; margin-bottom: 20px;">
         <div class="card-header bg-white">
         <a class="collapsed card-link" data-toggle="collapse" href="#{{counter}}">
@@ -78,8 +80,8 @@
             </div>
           </div>
         </div>
-        {% endfor %}
         {% endif %}
+        {% endfor %}
       </div>
 
     {% set entry = craft.entries.section('projekte').slug('klausel').one() %}
@@ -87,15 +89,15 @@
 
   </div>
 
-  <div class="container-fluid no-padding" style="background-color: #ffffff;" id="ziel">
+  <div class="container-fluid no-padding" style="padding-top: 4rem; background-color: #ffffff;" id="ziel">
     <div class="container achterspaltenlayout text-center">
       {% set entry = craft.entries.section('projekte').slug('starke-kinder').one() %}
-        <h2 > {{ entry.title }} </h2>
+        <h2 style="padding-bottom: 2rem;"> {{ entry.title }} </h2>
         <div id="anleser"> {{ entry.anleser }}    </div>
         <img class="img-fluid mx-auto d-block"  src="  {% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" style="padding-bottom: 0;">
     </div>
 
-    <div class="container zwoelferspaltenlayout">
+    <div class="container zwoelferspaltenlayout" style="padding-bottom: 5rem; padding-top: 3rem;">
 
       <div class="row">
       {% set entries = craft.entries.section('projekte').slug('starke-kinder').one().children().all() %}
@@ -134,30 +136,31 @@
   </div>
 </div> <!-- Der orange Berg mit dem Spendenaufruf -->
 
-<div class="container zwoelferspaltenlayout text-center" id="ganzheitlich">
+<div class="container zwoelferspaltenlayout text-center" id="ganzheitlich" style="padding-bottom: 5rem;">
   {% set entry = craft.entries.section('projekte').slug('ganzheitliche-begleitung').one() %}
     <h2> {{ entry.title }} </h2>
     <img class="img-fluid mx-auto d-block"  src="  {% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" style="padding-bottom: 0;">
 </div> <!-- ganzheitliche Begleitung -->
 
-<div class="container-fluid no-padding" style="background-color: white;" id="warum">
-  <div class="container achterspaltenlayout text-center" style="padding-bottom: 0;">
+<div class="container-fluid no-padding" style="background-color: white; padding-top: 0;" id="warum">
+  <div class="container achterspaltenlayout text-center" style="padding-bottom: 0; padding-top: 5rem;">
     {% set entry = craft.entries.section('projekte').slug('warum-ganzheitlich').one() %}
 
-      <h2> {{ entry.title }} </h2>
+      <h2 style="padding-bottom: 2rem;"> {{ entry.title }} </h2>
       <div id="anleser" style="padding-bottom: 0;"> {{ entry.anleser }}    </div>
   </div>
 
-<div class="container zwoelferspaltenlayout text-center" style="padding-top: 0;">
+<div class="container zwoelferspaltenlayout text-center" style="padding-top: 3rem;">
   {% set entry = craft.entries.section('projekte').slug('dorfentwicklung-chancen-für-dörfer').one() %}
-   <hr style="height: 1px; margin-top: 2rem; margin-bottom: 2rem;"> <div id="anleser"> Lernen Sie unsere weiteren Progamme kennen </div>
+   <hr style="height: 1px; margin-top: 2rem; margin-bottom: 5rem;">
+   <div id="anleser" style="padding-bottom: 5rem;"> Lernen Sie unsere weiteren Progamme kennen </div>
 </div>
 
-{% include '_layouts/weiterleitungkorrekt' %}
-<div style="padding-top: 5rem;"> </div>
+{% include '_layouts/weiterleitungmitzeilenumbruch' %}
+<div style="padding-top: 2.5rem;"> </div>
 
 {% set entry = craft.entries.section('projekte').slug('naturschutz').one() %}
-{% include '_layouts/weiterleitungkorrekt' %}
-<div style="padding-top: 5rem;"> </div>
+{% include '_layouts/weiterleitungmitzeilenumbruch' %}
+<div style="padding-top: 2.5rem;"> </div>
 
   {% endblock %}
