--- a/templates/craft_sicherungWebsite/templates/projekte/themen.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/themen.html
@@ -13,7 +13,7 @@
 
 {% block block1 %}
 
-<div class="container-fluid text-center" id="ersterContainer" style="padding-top: 6.5rem; position: relative;">
+<div class="container-fluid text-center" id="ersterContainer" style="padding-top: 7rem; position: relative;">
 
   <nav aria-label="breadcrumb" id="info">
     <ol class="breadcrumb">
@@ -25,16 +25,16 @@
   <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;">
 
   <div class="container achterspaltenlayout" style="position: relative;">
-    <h1 style="padding-bottom: 30px;"> Themen, die uns bewegen  </h1>
+    <h1 style="padding-bottom: 2rem;"> Themen, die uns bewegen  </h1>
     <p id="anleser"> Diese Themenbereiche sind für unsere Arbeit von besonderer Bedeutung. </p>
   </div>
 </div>
 
 <div class="container-fluid no-padding" style="background-color: #ffffff;">
 
-  <div class="container achterspaltenlayout text-center">
+  <div class="container achterspaltenlayout text-center" style="padding-top: 3rem;">
     {% set entry = craft.entries.section('projekte').slug('armutsbekämpfung').one() %}
-    <h2> {{ entry.title }} </h2>
+    <h2 style="padding-bottom: 2rem;"> {{ entry.title }} </h2>
     <div id="anleser" style="padding-bottom: 0px;"> {{ entry.anleser }}</div>
   </div>
 
